--- a/index.html
+++ b/index.html
@@ -10,15 +10,22 @@
         <aside class="row-span-2 bg-teal-600 flex flex-col justify-between py-5 px-2">
             <h1 class="text-2xl font-bold px-6">Calculadora de Investimentos</h1>
             <form id="investment-form" class="w-full">
-                <div class="flex flex-col w-full px-6 my-2">
+                <div class="flex flex-col w-full px-6 my-2 h-[4.25rem]">
                     <label for="starting-amount" class="font-bold text-gray-700">Investimento inicial</label>
                     <div class="flex">
                         <input value="R$" class="w-1/6 text-center rounded-l-lg" type="text" disabled />
-                        <input type="text" class="w-5/6 rounded-r-lg px-2" id="starting-amount" name="starting-amount" placeholder="0,00" required/>
+                        <input
+                            type="text"
+                            class="w-5/6 rounded-r-lg px-2"
+                            id="starting-amount"
+                            name="starting-amount"
+                            placeholder="0,00"
+                            required
+                        />
                     </div>
                 </div>
 
-                <div class="flex flex-col w-full px-6 my-2">
+                <div class="flex flex-col w-full px-6 my-2 h-[4.25rem]">
                     <label for="additional-contribution" class="font-bold text-gray-700">Aportes adicionais</label>
                     <div class="flex">
                         <input value="R$" class="w-1/6 text-center rounded-l-lg" type="text" disabled />
@@ -32,12 +39,18 @@
                     </div>
                 </div>
 
-                <div class="flex flex-col w-full px-6 my-2">
+                <div class="flex flex-col w-full px-6 my-2 h-[4.25rem]">
                     <label for="time-amount" class="font-bold text-gray-700">Prazo</label>
                     <div class="flex">
-                        <input type="text" class="w-4/6 rounded-l-lg px-2" id="time-amount" placeholder="0" required/>
+                        <input
+                            type="text"
+                            class="w-4/6 rounded-l-lg px-2"
+                            id="time-amount"
+                            name="time-amount"
+                            placeholder="0"
+                            required
+                        />
                         <select
-                            name="time-amount-period"
                             id="time-amount-period"
                             class="w-2/6 text-center rounded-r-lg border-l-2 border-teal-900 hover:bg-teal-900 hover:text-slate-200"
                         >
@@ -47,13 +60,19 @@
                     </div>
                 </div>
 
-                <div class="flex flex-col w-full px-6 my-2">
+                <div class="flex flex-col w-full px-6 my-2 h-[4.25rem]">
                     <label for="return-rate" class="font-bold text-gray-700">Rentabilidade</label>
                     <div class="flex">
                         <input value="%" class="w-1/6 text-center rounded-l-lg" type="text" disabled />
-                        <input type="text" class="w-3/6 px-2" id="return-rate" name="return-rate" placeholder="0" required/>
+                        <input
+                            type="text"
+                            class="w-3/6 px-2"
+                            id="return-rate"
+                            name="return-rate"
+                            placeholder="0"
+                            required
+                        />
                         <select
-                            name="evaluation-period"
                             id="evaluation-period"
                             class="w-2/6 text-center rounded-r-lg border-l-2 border-teal-900 hover:bg-teal-900 hover:text-slate-200"
                         >
@@ -63,17 +82,33 @@
                     </div>
                 </div>
 
-                <div class="flex flex-col w-full px-6 my-2">
+                <div class="flex flex-col w-full px-6 my-2 h-[4.25rem]">
                     <label for="tax-rate" class="font-bold text-gray-700">Impostos sobre lucro</label>
                     <div class="flex">
                         <input value="%" class="w-1/6 text-center rounded-l-lg" type="text" disabled />
-                        <input type="text" class="w-5/6 rounded-r-lg px-2" id="tax-rate" name="tax-rate" placeholder="0" required/>
+                        <input
+                            type="text"
+                            class="w-5/6 rounded-r-lg px-2"
+                            id="tax-rate"
+                            name="tax-rate"
+                            placeholder="0"
+                            required
+                        />
                     </div>
                 </div>
             </form>
             <div class="flex h-12 px-6 my-8 w-full gap-2">
-                <button id="calculate-results" form="investment-form" class="w-1/2 rounded-lg bg-teal-900 text-slate-200 hover:bg-teal-700">Calcular</button>
-                <button class="w-1/2 rounded-lg bg-teal-400 text-gray-900 hover:bg-teal-300">Limpar</button>
+                <button
+                    id="calculate-results"
+                    form="investment-form"
+                    type="submit"
+                    class="w-1/2 rounded-lg bg-teal-900 text-slate-200 hover:bg-teal-700"
+                >
+                    Calcular
+                </button>
+                <button id="clear-form" class="w-1/2 rounded-lg bg-teal-400 text-gray-900 hover:bg-teal-300">
+                    Limpar
+                </button>
             </div>
         </aside>
         <main>
